--- a/html/Cart.html
+++ b/html/Cart.html
@@ -17,12 +17,28 @@
 
 <body>
     <div data-role="page" data-theme="d">
+        <div data-role="popup" id="coupons-pop" data-theme="" class="ui-corner-all">
+            <div style="padding:10px 20px;">
+                <fieldset data-role="controlgroup">
+                    <input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked">
+                    <label for="radio-choice-1">Merc's Coupon(50% off)</label>
+                    <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2">
+                    <label for="radio-choice-2">Sbeves's Coupon(50% off)</label>
+                    <input type="radio" name="radio-choice-1" id="radio-choice-3" value="choice-3">
+                    <label for="radio-choice-3">Steve's Coupon(50% off)</label>
+                </fieldset>
+
+                <button onclick="ApplyCoupons()">
+                    Apply
+                </button>
+            </div>
+        </div>
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
                 <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../Resources/images/logos/Transparent.png" border="0">
                 </a>
-                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
+                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Cart</h3>
 
                 <a href="Ar.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
@@ -46,7 +62,7 @@
             </ul>
         </div>
 
-        <div id="btn-checkout">
+        <div id="btn-checkout" style="display: grid;grid-template-columns: 20% 80%">
 
         </div>
 
@@ -64,6 +80,8 @@
 
 
         </div>
+
+
 
         <br>
         <br>
