Dev completes testing left

--- a/html/Cart.html
+++ b/html/Cart.html
@@ -40,7 +40,7 @@
                 </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Cart</h3>
 
-                <a href="Ar.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
                 </a>
 
