--- a/html/fashion.html
+++ b/html/fashion.html
@@ -19,12 +19,12 @@
     <div data-role="page" data-theme="d" id="page-content">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
-                <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                    <img src="../Resources/images/logos/Transparent.png" border="0">
+                <a data-rel="back"  class="btn-home ui-btn-none ui-btn ui-corner-all"  data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/icons8-back-arrow-96.png" style="height: 29px!important;     margin-top: 3px;" border="0">
                 </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
 
-                <a href="Ar.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
                 </a>
 
