--- a/html/Ar.html
+++ b/html/Ar.html
@@ -15,38 +15,38 @@
     <div class='speech-bubble'></div>
     <a-scene embedded arjs cursor="rayOrigin: mouse" accepts-clicks>
 
-        <a-marker id="pyra-marker" type="pattern" url="../builder-markers/pyra.patt">
-            <a-entity id="pyra" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" scale="0.05 0.05 0.05" position="0 0 0.5"></a-entity>
+
+        <a-marker id="sbeve-marker" type="pattern" url="../builder-markers/people/sbeve.patt">
+            <a-entity id="sbeve" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="biggie-marker" type="pattern" url="../builder-markers/biggie.patt">
-            <a-entity id="biggie" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        <a-marker id="merc-marker" type="pattern" url="../builder-markers/people/merc.patt">
+            <a-entity id="merc" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="frenchie-marker" type="pattern" url="../builder-markers/frenchie.patt">
-            <a-entity id="frenchie" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        <a-marker id="meek-marker" type="pattern" url="../builder-markers/people/meek.patt">
+            <a-entity id="meek" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="toob-marker" type="pattern" url="../builder-markers/toob.patt">
-            <a-entity id="toob" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        <a-marker id="sherrif-marker" type="pattern" url="../builder-markers/people/sherrif.patt">
+            <a-entity id="sherrif" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="lil-marker" type="pattern" url="../builder-markers/lil.patt">
-            <a-entity id="lil" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        <a-marker id="pewds-marker" type="pattern" url="../builder-markers/people/pewds.patt">
+            <a-entity id="pewds" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="hammer-marker" type="pattern" url="../builder-markers/hammer.patt">
+
+
+        <a-marker id="cow-marker" type="pattern" url="../builder-markers/items/hammer.patt">
             <a-entity id="hammer" gltf-model="url(../Resources/3dmodels/game/minecraft_-_cow/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="screwdriver-marker" type="pattern" url="../builder-markers/screwdriver.patt">
+        <a-marker id="horse-marker" type="pattern" url="../builder-markers/items/screwdriver.patt">
             <a-entity id="screwdriver" gltf-model="url(../Resources/3dmodels/game/minecraft_-_horse/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="blocks-marker" type="pattern" url="../builder-markers/blocks.patt">
+        <a-marker id="witch-marker" type="pattern" url="../builder-markers/items/blocks.patt">
             <a-entity id="blocks" gltf-model="url(../Resources/3dmodels/game/minecraft_-_witch/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="hat-marker" type="pattern" url="../builder-markers/hat.patt">
+        <a-marker id="chicken-marker" type="pattern" url="../builder-markers/items/hat.patt">
             <a-entity id="hat" gltf-model="url(../Resources/3dmodels/game/minecraft_-_chicken/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
         </a-marker>
-        <a-marker id="wrench-marker" type="pattern" url="../builder-markers/wrench.patt">
+        <a-marker id="wrench-marker" type="pattern" url="../builder-markers/items/wrench.patt">
             <a-entity id="wrench" gltf-model="url(../Resources/3dmodels/game/minecraft_-_pig/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
-        </a-marker>
-        <a-marker id="demo-marker" type="pattern" url="../builder-markers/demo.patt">
-            <a-box id="demo" position="0 0.5 0" scale="0.5 0.5 0.5" material='color: green;'></a-box>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
